# montecarloproject

./: .gitignore  README.md  pyproject.toml
src/: detector.py  diff_cross_section.py  generate_events.py  kinematics.py  optimize_target.py  scattering.py
src/data/: dsigma_dt_eta.root  dsigma_dt_pi0.root  histogram.root  histograms_100k.root  metadata_bkg.json  metadata_bkg_100k.json  metadata_eta.json  metadata_eta_100k.json  metadata_pi0.json  metadata_pi0_100k.json  metrics.json  metrics_100k.json
